--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
 	</body>
 	<script>
 		// function openwebrx_init()
-		open_websocket("ws://kiwisdr.hirokinet.com:8074/1529052345392/W/F");
-		// secondary_demod_init();
+		var ws = open_websocket("ws://kiwisdr.hirokinet.com:8074/1529052345392/SND");
+
+		window.setTimeout(function(){
+			// waterfall_init();
+			audio_preinit();
+			audio_init();
+			ws.send("SET AR OK in=12000 out=48000");
+			ws.send("SET debug_v=0");
+			ws.send("SET squelch=0 max=0");
+			ws.send("SET lms_denoise=0");
+			ws.send("SET lms_autonotch=0");
+			ws.send("SET genattn=0");
+			ws.send("SET gen=0 mix=-1");
+			ws.send("SET mod=am low_cut=-4000 high_cut=4000 freq=1000");
+			ws.send("SET agc=0 hang=0 thresh=0 slope=0 decay=0 manGain=0");
+			ws.send("SET browser=Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36");
+			ws.send("SET compression=1");
+			ws.send("SET nb=0 th=50");
+			ws.send("SET agc=1 hang=0 thresh=0 slope=0 decay=0 manGain=0");
+			ws.send("SET agc=1 hang=0 thresh=-100 slope=0 decay=0 manGain=50");
+			// ws.send("");
+			// ws.send("");
+			// ws.send("");
+		}, 3000);
+
+
 	</script>
 </html>
