--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	</body>
 	<script>
-		var ws = open_websocket("ws://kiwisdr.hirokinet.com:8074/1529052345392/SND");
+		var ws = open_websocket("ws://kiwisdr.hirokinet.com:8074/" + (new Date()).getTime() + "/SND");
 
 		window.setTimeout(function() {			
 			audio_preinit();
@@ -24,14 +24,16 @@
 			ws.send("SET lms_autonotch=0");
 			ws.send("SET genattn=0");
 			ws.send("SET gen=0 mix=-1");
-			ws.send("SET mod=am low_cut=-4000 high_cut=4000 freq=1000");
-			ws.send("SET agc=0 hang=0 thresh=0 slope=0 decay=0 manGain=0");
 			ws.send("SET browser=Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.87 Safari/537.36");
 			ws.send("SET compression=1");
 			ws.send("SET nb=0 th=50");
 			ws.send("SET agc=1 hang=0 thresh=0 slope=0 decay=0 manGain=0");
 			ws.send("SET agc=1 hang=0 thresh=-100 slope=0 decay=0 manGain=50");
-			ws.send("SET mod=lsb low_cut=-2700 high_cut=-300 freq=594.000");
+			ws.send("SET mod=am low_cut=-4000 high_cut=4000 freq=594.000");
+
+			window.setInterval(function() {
+				ws.send("SET keepalive");
+			}, 10000)
 		}, 3000);
 	</script>
 </html>
